reorginized routs
